--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,16 @@
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
-    <dependencies><!-- https://mvnrepository.com/artifact/com.google.protobuf/protobuf-java -->
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.6</version>
+        </dependency>
+
+
+        <!-- https://mvnrepository.com/artifact/com.google.protobuf/protobuf-java -->
         <dependency>
             <groupId>com.google.protobuf</groupId>
             <artifactId>protobuf-java</artifactId>
