--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     implementation 'org.jsoup:jsoup:1.12.1'
     testImplementation 'junit:junit:4.11'
     compileOnly 'org.projectlombok:lombok:1.18.8'
+    // https://mvnrepository.com/artifact/com.google.guava/guava
+    compile group: 'com.google.guava', name: 'guava', version: '30.1-jre'
 }
 
 group = 'com.chen'
